# exposicao-arte-backend

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  entrypoint.sh  esquema-dados.dbml  pyproject.toml
.github/: copilot-instructions.md
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yml
migrations/: env.py
migrations/versions/: 114629e2de17_adição_de_texto_na_tabela_comentarioobra.py  197d97706f84_criação_da_tabela_categoria.py  1c5b605f4c0f_adição_de_coordenadas_geográficas_no_.py  26cfa8a9b058_criação_da_tabela_obras.py  26cfa8a9b058_migração_modelo_obras.py  2ef38f04ef3d_criação_das_tabelas_de_avaliações_de_.py  41590745c3be_create_users_table.py  4894c9d235da_novos_campos_pro_usuario.py  519941dbf98e_criação_da_tabela_obras.py  5b681c3d5f50_create_link_rede_table.py  6596c0ca3538_create_events_table.py  71755b541ef7_create_category_table.py  8a4d6370b844_remove_campo_senha_e_manter_senha_hash_.py  a92865ea64aa_criação_da_tabela_link_rede.py  de5b170dc9bb_criação_do_modelo_avaliação_obra.py  e5bf3fa577d9_create_events_table.py  f26aeed58b74_criação_da_tabela_comentario_obras.py
scripts/: analise.ipynb  gerar_dados.py
src/: app.py  cachorro.py  config.py  database.py  security.py
src/errors/: __init__.py
src/models/: __init__.py  avaliacoes_eventos.py  avaliacoes_obras.py  categoria.py  comentario_evento.py  comentario_obra.py  evento.py  link_rede.py  obra.py  obra_evento.py  obras.py  usuario.py
src/repositories/: __init__.py  avaliacoes_eventos.py  avaliacoes_obras.py  categoria.py  comentario_evento.py  comentario_obra.py  evento.py  link_rede.py  obra.py  obra_evento.py  usuario.py
src/resources/models/: prever_evento.joblib
src/routers/: __init__.py  auth.py  avaliacoes_eventos.py  avaliacoes_obras.py  categoria.py  comentario_evento.py  comentario_obra.py  evento.py  link_rede.py  obra.py  obra_evento.py  usuario.py
src/services/: __init__.py  eventos.py  usuario.py
tests/: README.md  __init__.py  conftest.py  test_api_schema.py  test_migrations.py  test_usuarios.py
tests/migrations/: test_migrations.py  test_robustness.py
