[project]
name = "exposicao-arte-backend"
version = "0.1.0"
description = "Sistema para artistas locais divulgarem suas obras, projetos e eventos culturais, promovendo arte acessível."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
]

[tool.pyright]
ignore = ["migrations"]

[dependency-groups]
dev = ["schemathesis>=4.2.1"]
