[project]
name = "exposicao-arte-backend"
version = "0.1.0"
description = "Sistema para artistas locais divulgarem suas obras, projetos e eventos culturais, promovendo arte acessível."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
]

[tool.pyright]
ignore = ["migrations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers", "-m", "not integration"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests that require external services like PostgreSQL",
]
filterwarnings = ["ignore::DeprecationWarning:testcontainers"]

[dependency-groups]
dev = ["schemathesis>=4.2.1", "pytest>=8.3.4", "testcontainers>=4.8.2"]
